> added mac support

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Link-Q",
   "description": "Creates queue of links to check out later. No bookmarks. No Tabs",
-  "version": "0.7",
+  "version": "0.71",
   "icons" : {"16": "icon-16.png",
 			"48": "icon-48.png",
 			"128": "icon-128.png" },
@@ -15,11 +15,11 @@
   },
   "commands": {
     "queue-forward": {
-      "suggested_key": { "default": "Ctrl+Shift+F" },
+      "suggested_key": { "windows": "Ctrl+Shift+F", "mac": "Command+Shift+F" },
       "description": "Load Next Page In Queue"
     },
 	"hover-add": {
-      "suggested_key": { "default": "Ctrl+Shift+A" },
+      "suggested_key": { "windows": "Ctrl+Shift+A", "mac": "Command+Shift+A" },
       "description": "Add Link You're Hovering Over To Queue"
     }
   },"content_scripts": [
