--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,13 @@
   "icons" : {"16": "icon-16.png",
 			"48": "icon-48.png",
 			"128": "icon-128.png" },
-  "permissions": ["contextMenus", "tabs"],
+  "permissions": ["contextMenus", "tabs","bookmarks"],
   "browser_action": {
     "default_icon": "icon-ba.png",
     "default_popup": "popup.html"
   },
-  "background": {
+    "options_page": "options.html",
+    "background": {
     "scripts": ["background.js"]
   },
   "commands": {
